<resources>
    <string name="app_name">Barbell Calculator</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_clear">Clear</string>
    <string name="button_calculate">=</string>
    <string name="button_45">45</string>
    <string name="button_35">35</string>
    <string name="button_25">25</string>
    <string name="button_10">10</string>
    <string name="button_5">5</string>
    <string name="button_2.5">2.5</string>
</resources>
